--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">iCoder</a>
+            <a class="navbar-brand" href="/iCoderBootsrap">iCoder</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="items">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/iCoderBootsrap">Home</a>
                     </li>
                     <li class="items">
-                        <a class="nav-link active" href="/About.html">About </a>
+                        <a class="nav-link active" href="/iCoderBootsrap/About.html">About </a>
                     </li>
                     <li class="items dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="items">
-                        <a class="nav-link" href="/Contact.html">Contact Us</a>
+                        <a class="nav-link" href="/iCoderBootsrap/Contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
