--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" aria-current="page" href="/iCoder-Bootstrap">Home</a>
                     </li>
                     <li class="items">
-                        <a class="nav-link active" href="/iCoder-Bootstrap/About.html">About </a>
+                        <a class="nav-link active" href="/iCoder-Bootstrap/about.html">About </a>
                     </li>
                     <li class="items dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="items">
-                        <a class="nav-link" href="/iCoder-Bootstrap/Contact.html">Contact Us</a>
+                        <a class="nav-link" href="/iCoder-Bootstrap/contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
