--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="items">
-                        <a class="nav-link" aria-current="page" href="/iCoder-Bootstrap">Home</a>
+                        <a class="nav-link" aria-current="page" href="/iCoder-Bootstrap/">Home</a>
                     </li>
                     <li class="items">
                         <a class="nav-link active" href="/iCoder-Bootstrap/about.html">About </a>
